--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -8,7 +8,9 @@
 
 :root {
   --color-primary: #ffffff;
+  --color-secondary: #f8f8f8;
   --color-background: #c4def7;
+  --color-grey-50: #babdc69b;
   --color-grey-100: #babdc6;
   --color-slate-500: #8991ad;
   --color-slate-700: #3d518f;
@@ -16,13 +18,21 @@
   --color-azure-600: #56a0ee;
   --color-azure-700: #276ef7;
   --color-green-100: #cef0d9;
-  --color-checkbox-700: #3ec469;
+  --color-green-700: #3ec469;
+  --color-black-50: #0000008c;
   --color-black: #000;
+
+  --color-purple-50: #7f89a6b2;
+  --color-purple-100: #95a5bb;
+  --color-purple-200: #7f89a6;
+  --color-purple-600: #1f2e5b;
 
   --gap-md: 1.6rem;
   --gap-xs: 0.4rem;
 
   --radius-md: 2.4rem;
+  --radius-sm: 1rem;
+  --radius-xs: 0.6rem;
 
   --font-title: 2.4rem;
   --font-text: 1.6rem;
