--- a/assets/styles/reset.css
+++ b/assets/styles/reset.css
@@ -16,7 +16,6 @@ body {
   overflow-x: hidden;
   font-family: Vazirmatn;
   font-weight: 400;
-  line-height: 1.5;
   background-color: var(--color-background);
 }
 
@@ -29,6 +28,7 @@ a:visited {
 button {
   border: none;
   cursor: pointer;
+  color: inherit;
 }
 
 input,
@@ -36,6 +36,7 @@ button,
 textarea,
 select {
   font: inherit;
+  text-align: right;
 }
 
 p,
@@ -46,6 +47,7 @@ h4,
 h5,
 h6 {
   overflow-wrap: break-word;
+  text-align: right;
 }
 
 li {
