Fixed :: grid issues

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -9,6 +9,7 @@
 :root {
   --color-primary: #ffffff;
   --color-secondary: #f8f8f8;
+  --color-teriary: #f3f4f6;
   --color-background: #c4def7;
   --color-grey-50: #babdc69b;
   --color-grey-100: #babdc6;
