--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -11,8 +11,10 @@
   --color-secondary: #f8f8f8;
   --color-teriary: #f3f4f6;
   --color-background: #c4def7;
+  --color-grey-20: #babdc642;
   --color-grey-50: #babdc69b;
   --color-grey-100: #babdc6;
+  --color-slate-200: #8991ada8;
   --color-slate-500: #8991ad;
   --color-slate-700: #3d518f;
   --color-azure-500: #13adee;
