--- a/assets/styles/weatherAndTime.css
+++ b/assets/styles/weatherAndTime.css
@@ -1,4 +1,9 @@
+/* 
+   Time & Date
+*/
+
 .time__part {
+  width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,7 +16,8 @@
 
 .time__part > h4 {
   color: var(--color-purple-600);
-  font-size: 1.8rem;
+  font-size: 1.7rem;
+  margin-top: 1rem;
 }
 
 .time__part > div {
@@ -33,18 +39,96 @@
 }
 
 .dropdowns {
-  display: flex;
   margin-top: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .dropdowns select {
   border-radius: var(--radius-md);
   padding: 0.5rem;
   border: 1px solid var(--color-grey-20);
-  font-size: 1.1rem;
+  font-size: 1rem;
   color: var(--color-slate-500);
 }
 
-/* .fa-chevron-down {
-  font-size: 0.5rem;
-} */
+/* 
+   Weather
+*/
+
+.weather__part {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.weather__degree {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.weather__degree > h3 {
+  font-size: 2.8rem;
+  color: var(--color-grey-100);
+}
+
+.weather__degree > img {
+  height: 2.5rem;
+  width: 2.5rem;
+}
+
+.weather__funny {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  font-size: 1.3rem;
+  font-weight: 500;
+  margin-top: 1.3rem;
+}
+
+.weather__funny > p {
+  display: inline-block;
+  text-wrap: nowrap;
+}
+
+.weather__funny > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.weather__funny img {
+  height: 1.3rem;
+  width: 1.3rem;
+}
+
+.weather__status {
+  display: flex;
+  margin-top: 1rem;
+}
+.weather__status > p {
+  font-size: 1rem;
+  color: var(--color-grey-100);
+}
+
+.weather__status > p > span {
+  color: var(--color-grey-300);
+  font-weight: 500;
+}
+
+.weather__part select {
+  margin-top: 1.4rem;
+  border-radius: var(--radius-md);
+  padding: 0.5rem;
+  border: 1px solid var(--color-grey-20);
+  font-size: 1rem;
+  color: var(--color-slate-500);
+}
+
+.rotated-caret {
+  transform: rotate(90deg);
+  display: inline-block;
+}
