--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -12,6 +12,10 @@
 .settings-and-account {
   grid-column: main-start / main-end;
   grid-row: 1 / 2;
+  display: flex;
+  align-items: center;
+
+  gap: 2rem;
 }
 
 .todo {
