--- a/assets/styles/responsive.css
+++ b/assets/styles/responsive.css
@@ -20,7 +20,8 @@
   }
 }
 
-@media only screen and (max-width: 46.8em) {
+/* 748.8px */
+@media only screen and (max-width: 56.25em) {
   html {
     font-size: 42%;
   }
