Implemented :: Date and time Formatted :: info to correct string Converted :: eng numbers to fa

--- a/assets/styles/weatherAndTime.css
+++ b/assets/styles/weatherAndTime.css
@@ -38,6 +38,10 @@
   word-wrap: break-word;
 }
 
+.christian-date > p {
+  direction: ltr;
+}
+
 .dropdowns {
   margin-top: 0.5rem;
   display: flex;
