--- a/assets/styles/weatherAndTime.css
+++ b/assets/styles/weatherAndTime.css
@@ -141,3 +141,35 @@
   margin-top: 0.5rem;
   font-size: 0.8rem;
 }
+
+/* ******************** *
+    Loading Spinner 
+* ********************* */
+
+.loading-container {
+  flex-grow: 1;
+  align-self: center;
+  display: none;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Styles for the loading spinner */
+.spinner {
+  border: 8px solid #f3f3f3;
+  border-top: 8px solid #3498db;
+  border-radius: 50%;
+  width: 4rem;
+  height: 4rem;
+  animation: spin 1s linear infinite;
+}
+
+/* Animation for the spinning effect */
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
