Changed :: minor changes

--- a/assets/styles/weatherAndTime.css
+++ b/assets/styles/weatherAndTime.css
@@ -124,6 +124,10 @@
   color: var(--color-slate-500);
 }
 
+.weather__part .fa-angle-down {
+  margin-top: 1.5rem;
+}
+
 .rotated-caret {
   transform: rotate(90deg);
   display: inline-block;
